# pose_manager

./: README.md
pose_manager/: CMakeLists.txt  package.xml
pose_manager/msg/: Location.msg  LocationArray.msg
pose_manager/src/: poseMgr_client.cpp  poseMgr_service.cpp
pose_manager/srv/: add.srv  deleteAll.srv  queryAll.srv  queryName.srv  queryPose.srv
